--- a/ScheduleOfLoan/.settings/org.eclipse.core.resources.prefs
+++ b/ScheduleOfLoan/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/loan/employee.jsp=UTF-8
 encoding//WebContent/WEB-INF/loan/header.jsp=UTF-8
 encoding//WebContent/WEB-INF/loan/mywallet.jsp=UTF-8
 encoding//WebContent/WEB-INF/loan/popup/mywallet_add.jsp=UTF-8
