--- a/ScheduleOfLoan/.settings/org.eclipse.core.resources.prefs
+++ b/ScheduleOfLoan/.settings/org.eclipse.core.resources.prefs
@@ -5,3 +5,4 @@ encoding//WebContent/WEB-INF/loan/mywallet.jsp=UTF-8
 encoding//WebContent/WEB-INF/loan/popup/mywallet_add.jsp=UTF-8
 encoding//src/com/java/loan/services/MywalletService.java=UTF-8
 encoding//src/com/java/loan/utils/SessionUtils.java=UTF-8
+encoding/src=UTF-8
